--- a/README
+++ b/README
@@ -1,14 +1,15 @@
-This is the code for the “IEEE-754 Analyzers” web site hosted at
-http://babbage.cs.qc.cuny.edu/IEEE-754.
+这个项目是 “[IEEE-754 Analyzers][1]” 网站的源代码。
 
-Originally created as a student project to parse floating-point numbers,
-the code serves as a reference source for people who want to learn how
-the IEEE-754 standard works and/or to verify the correctness of code
-written for applications that work directly with floating-point values.
+[1]: http://babbage.cs.qc.cuny.edu/IEEE-754
 
-See the web site’s FAQ for details.
+最初是用来开发一个解析浮点数的学生项目。
+用来帮助人们理解 IEEE-754 浮点数规范，并帮助开发者验证浮点数。
 
-Christopher Vickery
-Queens College of CUNY
-June, 2012
+在 FAQ 页面可以查看更多详细信息。
+
+作者: Christopher Vickery（克里斯托弗·维克利）
+学校: Queens College of CUNY
+June, 2012（2012年6月）
+
+译者：[justjavac](http://justjavac.com)
 
